Fix name wrap

--- a/apps/modernization-ui/src/apps/deduplication/configuration/pass-configuration/pass-entry/pass-entry.module.scss
+++ b/apps/modernization-ui/src/apps/deduplication/configuration/pass-configuration/pass-entry/pass-entry.module.scss
@@ -40,6 +40,7 @@
                 font-weight: 700;
                 line-height: normal;
                 cursor: pointer;
+                text-align: left;
 
                 // Remove button styling
                 background: none;
